@@ -127,11 +127,6 @@ class JobGenerator (JediKnight):
                                         tmpLog.debug('throttled')
                                         self.taskBufferIF.unlockProcess_JEDI(vo,prodSourceLabel,cloudName,workQueue.queue_id,self.pid)
                                         continue
-                                elif thrFlag == False:
-                                    # check if the queue has jobs more than nQueueLimit
-                                    if self.withThrottle and throttle.lackOfJobs(vo,workQueue.queue_type):
-                                        tmpLog.debug('unlock for multiple processes to quickly fill the queue until nQueueLimit is reached')
-                                        self.taskBufferIF.unlockProcess_JEDI(vo,prodSourceLabel,cloudName,workQueue.queue_id,self.pid)
                                 else:
                                     # leveled flag
                                     mergeUnThrottled = not throttle.mergeThrottled(vo,workQueue.queue_type,thrFlag)
@@ -171,6 +166,11 @@ class JobGenerator (JediKnight):
                                 else:
                                     tmpLog.debug('got {0} input tasks'.format(len(tmpList)))
                                     if len(tmpList) != 0: 
+                                        if thrFlag == False:
+                                            # check if the queue has jobs more than nQueueLimit
+                                            if self.withThrottle and throttle.lackOfJobs(vo,workQueue.queue_type):
+                                                tmpLog.debug('unlock {0} for multiple processes to quickly fill the queue until nQueueLimit is reached'.format(cycleStr))
+                                                self.taskBufferIF.unlockProcess_JEDI(vo,prodSourceLabel,cloudName,workQueue.queue_id,self.pid)
                                         # put to a locked list
                                         inputList = ListWithLock(tmpList)
                                         # make thread pool
