@@ -1,5 +1,8 @@
 Release Notes
 
+* 10/6/2015
+  * changed JG to release the lock as soon as tasks are taken when nQueued<nQueueLimit
+
 * 10/2/2015
   * fixed JG to reset destinationDBlock when the site doesn't have endpoint for ddd:	
   * more fixed CF for seq_num+skipFilesUsedBy
